version 0.43
	* Fix ticket #19 : preface.h doesn't exist anymore in GNUstep
	  so stop including it just for the MAX macro
	* Fix ticket #18 with a patch from Sebastian
	  (note to self : learn shell syntax)
	* Fix ticket #20 with a patch from Sebastian
	* Add Italian translation from Bertalan Ivan

version 0.42 (2011/04/27)
	* Bug fixes and code cleanups
	* Handle read only stores when cut & pasting elements
	* Simple reminders/alarms handling with multiple backends
	* Alarm editor for events and tasks with basic functionalities
	* New images from OpenClipArt (bell_gold.svg)
	* Fix ticket #12 : timezone problems with recurrent events
	* Use calendar instead of store and agenda in the ui
	* Handle due date in tasks
	* Fix URL handling for GroupDAV calendars, tested against
	  Citadel and OGO
	* Enable copy/paste on multiple elements (select with control key)
	* Don't write authentication informations on the stdout (see ticket #17)

version 0.41 (2010/03/15)
	* Threads/memory pools/notifications fixes
	* Fix silly bugs in the makefile when using conditions : we 
	  always tried to link with libuuid and Addresses even when 
	  configure didn't detect them
	* Big changes in ConfigManager : it doesn't retain its listeners 
	  anymore and listeners are now global. It means that you can 
	  register for any key with any ConfigManager instance.
	* New ABStore that creates birthday events from Addresses contacts 
	  if the Addresses framework is available.
	* New application icon from OpenClipArt

version 0.40 (2010/03/05)
	* Display tooltips over appointments if the user want them
	* Use libuuid to generate unique event ids if available
	* Fix ticket #13 : iCalendar stores can use local files
	* The appointment editor becomes non modal
	* The task editor becomes non modal
	* Internationalization infrastructure and beginning of a french
	  translation
	* Set application title from the selected date and tab
	* Show today's date in the appicon